# curlpy

./: .gitignore  README.md  curlpy.py  pyproject.toml  test_curlpy.py
.github/workflows/: CI.yaml
examples/: download_image.py
