[tool.poetry]
name = "curlpy"
version = "0.1.0"
description = "curl like python interface"
authors = ["ucpr <contact@ucpr.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pycurl = "^7.43.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
