[tool.poetry]
name = "curlpy"
version = "0.1.0"
description = "curl like python interface"
authors = ["ucpr <contact@ucpr.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"
jedi = "^0.17.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
